--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <img src="images/blog-image.jpg" alt="Latest Blog" class="blog-img">
                 <div class="latest-post-content">
                 <div class="latest-post-header">
-                    <span class="side-arrow"></span>
+                    <span class="side-arrow">⮞</span>
                     <h3 class="label">Latest Post</h3>
                     <h4 class="selected-category"> LEADERSHIP </h4>
                 </div>
